testdata/baselines/reference/submodule/conformance/typedefCrossModule2.errors.txt
mod1.js(3,23): error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.
mod1.js(4,7): error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.
mod1.js(7,1): error TS2304: Cannot find name 'exports'.
mod1.js(10,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod1.js(10,1): error TS2300: Duplicate identifier 'export='.
mod1.js(10,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
mod1.js(20,1): error TS2304: Cannot find name 'exports'.
mod1.js(23,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod1.js(23,1): error TS2300: Duplicate identifier 'export='.
use.js(2,32): error TS2694: Namespace '"mod1".export=' has no exported member 'Baz'.
use.js(4,12): error TS2503: Cannot find namespace 'mod'.


==== use.js (2 errors) ====
    var mod = require('./mod1.js');
    /** @type {import("./mod1.js").Baz} */
                                   ~~~
!!! error TS2694: Namespace '"mod1".export=' has no exported member 'Baz'.
    var b;
    /** @type {mod.Baz} */
               ~~~
!!! error TS2503: Cannot find namespace 'mod'.
    var bb;
    var bbb = new mod.Baz();
    
==== mod1.js (9 errors) ====
    // error
    
    /** @typedef {number} Foo */
                          ~~~
!!! error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.
    class Foo { } // should error
          ~~~
!!! error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.
    
    /** @typedef {number} Bar */
    exports.Bar = class { }
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    
    /** @typedef {number} Baz */
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    ~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~
        Baz: class { }
    ~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS2300: Duplicate identifier 'export='.
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    
    // ok
    
    /** @typedef {number} Qux */
    var Qux = 2;
    
    /** @typedef {number} Quid */
    exports.Quid = 2;
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    
    /** @typedef {number} Quack */
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    ~~~~~~~~~~~~~~~~~~
        Quack: 2
    ~~~~~~~~~~~~
    }
    ~
!!! error TS2300: Duplicate identifier 'export='.
    